--- a/pair-em-up/css/pages/_game-screen.scss
+++ b/pair-em-up/css/pages/_game-screen.scss
@@ -1,3 +1,5 @@
+@use "../common/mixins" as m;
+
 .game-screen {
   display: flex;
   flex-direction: column;
@@ -21,7 +23,7 @@
     align-items: center;
     gap: clamp(10px, 4vw, 40px);
     flex-wrap: wrap;
-    background-color: #369c32;
+    background-color: #369C32;
   }
 
   &__main {
@@ -82,7 +84,7 @@
     cursor: pointer;
     transition: 0.2s ease;
 
-    &:hover {
+    @include m.non-sticking-hover {
       background-color: yellow;
     }
 
@@ -94,8 +96,8 @@
     &_selected {
       background-color: yellowgreen;
 
-      &:hover {
-        background-color: #efeeb2;
+      @include m.non-sticking-hover {
+        background-color: #EFEEB2;
       }
     }
 
